# openapi.json
@@ -570,13 +570,17 @@
           },
           "order_type": {
             "$ref": "#/components/schemas/OrderType"
+          },
+          "payment_method": {
+            "$ref": "#/components/schemas/PaymentMethod"
           }
         },
         "type": "object",
         "required": [
           "session_id",
           "customer_name",
-          "order_type"
+          "order_type",
+          "payment_method"
         ],
         "title": "CheckoutRequest"
       },
